# GEMS

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  infer.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
agent/: GEMS.py  base_agent.py  skill_manager.py
agent/server/: kimi.sh  qwen_image.py  z_image.py
agent/skills/text_rendering/: SKILL.md
comfyclaw/: __init__.py  agent.py  cli.py  client.py  evolve.py  harness.py  human_verifier.py  memory.py  skill_manager.py  sync_server.py  verifier.py  workflow.py
comfyclaw/_baseline_skills/longcat-image/: SKILL.md
comfyclaw/custom_node/: __init__.py
comfyclaw/custom_node/js/: comfy_claw_sync.js
comfyclaw/evolved_skills/longcat_oneig-en/: evolution_metadata.json
comfyclaw/skills/aesthetic_drawing/: SKILL.md
comfyclaw/skills/controlnet-control/: SKILL.md
comfyclaw/skills/controlnet_control/: SKILL.md
comfyclaw/skills/creative/: SKILL.md
comfyclaw/skills/creative_drawing/: SKILL.md
comfyclaw/skills/high_quality/: SKILL.md
comfyclaw/skills/hires_fix/: SKILL.md
comfyclaw/skills/longcat-image/: SKILL.md
comfyclaw/skills/lora-enhancement/: SKILL.md
comfyclaw/skills/lora_enhancement/: SKILL.md
comfyclaw/skills/photorealistic/: SKILL.md
comfyclaw/skills/planner-playbook/: SKILL.md
comfyclaw/skills/qwen-image-2512/: SKILL.md
comfyclaw/skills/regional_control/: SKILL.md
comfyclaw/skills/skill-creator/scripts/: generate_report.py
comfyclaw/skills/spatial/: SKILL.md
comfyclaw/skills/workflow-builder/: SKILL.md
comfyclaw/skills/z-image-turbo/: SKILL.md
comfyclaw/skills_evolved/learned-errors/: SKILL.md
comfyclaw/skills_evolved_benchmark_longcat_10/: evolution_metadata.json
comfyclaw/skills_evolved_benchmark_longcat_10/.versions/: cross-category-composition__v1__20260417T144422.md  high-count-generation__v1__20260417T151544.md  medium-count-generation__v2__20260417T151544.md  multi-object-layout__v1__20260417T020938.md
comfyclaw/skills_evolved_benchmark_longcat_10/counting-objects/: SKILL.md
comfyclaw/skills_evolved_benchmark_longcat_10/learned-errors/: SKILL.md
comfyclaw/skills_evolved_benchmark_longcat_10/material-rendering/: SKILL.md
comfyclaw/skills_evolved_benchmark_longcat_10/medium-count-generation/: SKILL.md
docs/: LORA_CONTROLNET.md
eval/: GenEval2.py
eval/ArtiMuse/: eval_artimuse.py  eval_artimuse.sh
eval/CREA/: CREA.py  data.jsonl  eval.py  judge_prompt.txt
experiments/: README.md  claw_benchmark.py  claw_longcat_benchmark.py  claw_qwen_benchmark.py  run_benchmark.py  run_neurips_experiments.py  setup.py
experiments/benchmarks/: __init__.py  dpg-bench.yaml  geneval2.yaml  oneig-en.yaml  oneig-zh.yaml  wise.yaml
experiments/models/: __init__.py  dreamshaper.yaml  longcat.yaml  qwen.yaml  z-image-turbo.yaml
tests/: conftest.py  e2e_lora_controlnet.py  e2e_lora_controlnet_real.py  test_agent.py  test_description_guidance.py  test_harness.py  test_human_verifier.py  test_lora.py  test_lora_controlnet_archs.py  test_memory.py  test_phase2_fixes.py  test_skill_manager.py  test_sync_server.py  test_verifier.py  test_workflow.py
